--- a/src/app/css/globals.scss
+++ b/src/app/css/globals.scss
@@ -64,3 +64,8 @@ body {
   -webkit-animation: fadeIn 1s;
   animation: fadeIn 1s;
 }
+
+/* Customize the scrollbar width */
+::-webkit-scrollbar {
+  width: 0px;
+}
